@startuml

title __MUSICMODULE's Class Diagram__\n


  

  namespace MusicModule {
    class MusicModule.AudioPlayerSendHandler {
        - audioPlayer : AudioPlayer
        - buffer : ByteBuffer
        - frame : MutableAudioFrame
        + AudioPlayerSendHandler()
        + canProvide()
        + isOpus()
        + provide20MsAudio()
    }
  }
  

  namespace MusicModule {
    class MusicModule.MusicController {
        - event : GuildMessageReceivedEvent
        - four : String
        - listOfTracks : ArrayList<AudioTrack>
        - one : String
        - player : AudioPlayer
        - playerManager : AudioPlayerManager
        - server : Guild
        - three : String
        - two : String
        - waiter : EventWaiter
        + MusicController()
        + checkEmote()
        + getAudioPlayerSendHandler()
        + getEvent()
        + getListOfTracks()
        + getPlayer()
        + getPlayerManager()
        + getScheduler()
        + getServer()
        + handleReaction()
        + initWaiter()
        + loadMusic()
        + playerClosed()
        + searchMusic()
        + setServer()
        - connectToVoiceChannels()
    }
  }

  

  namespace MusicModule {
    class MusicModule.TrackScheduler {
        - player : AudioPlayer
        - queue : BlockingDeque<AudioTrack>
        + TrackScheduler()
        + TrackScheduler()
        + addPlaylistToQueue()
        + addToQueue()
        + getQueue()
        + nextTrack()
        + onNextSong()
        + onPlayerPause()
        + onPlayerResume()
        + onTrackEnd()
        + onTrackException()
        + onTrackStart()
        + onTrackStuck()
        + play()
        + printelements()
        + skip()
    }
  }
  

  MusicModule.AudioPlayerSendHandler .up.|> net.dv8tion.jda.api.audio.AudioSendHandler
  MusicModule.MusicController -up-|> Commands.Command
  MusicModule.MusicController o-- MusicModule.AudioPlayerSendHandler : audioPlayerSendHandler
  MusicModule.MusicController o-- MusicModule.TrackScheduler : scheduler
  MusicModule.TrackScheduler -up-|> com.sedmelluq.discord.lavaplayer.player.event.AudioEventAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
